deploy-jaeger/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jaeger-operator
  template:
    metadata:
      labels:
        name: jaeger-operator
    spec:
      serviceAccountName: jaeger-operator
      containers:
      - name: jaeger-operator
        image: jaegertracing/jaeger-operator:1.17.1
        ports:
        - containerPort: 8383
          name: metrics
        args: ["start"]
        imagePullPolicy: IfNotPresent
      nodeSelector:
      #   AcceptType: SysTool
      tolerations:
      - key: AcceptType
        operator: Equal
        value: SysTool
        effect: NoSchedule
